merging SWMRHashMap